@@ -18,8 +18,11 @@
 
 import os
 import sys
+import unittest
 
-from bzrlib.tests import TestCase, _load_module_by_name
+from bzrlib.tests import TestCase, _load_module_by_name, \
+        TestSkipped
+import bzrlib.tests
 
 
 class SelftestTests(TestCase):
@@ -40,3 +43,15 @@ class MetaTestLog(TestCase):
         self.log('a test message')
         self._log_file.flush()
         self.assertContainsRe(self._get_log(), 'a test message\n')
+
+
+class TestSkippedTest(TestCase):
+    """Try running a test which is skipped, make sure it's reported properly."""
+    def test_skipped_test(self):
+        # must be hidden in here so it's not run as a real test
+        def skipping_test():
+            raise TestSkipped('test intentionally skipped')
+        runner = bzrlib.tests.TextTestRunner(stream=self._log_file)
+        test = unittest.FunctionTestCase(skipping_test)
+        result = runner.run(test)
+        self.assertTrue(result.wasSuccessful())
